// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macro validation Date/Number format must be string, variable or object with custom format 1`] = `
undefined: Format can be either string for buil-in formats, variable or object for custom defined formats.
  2 |       Trans, Plural, Select, SelectOrdinal, DateFormat, NumberFormat 
  3 |     } from '../src/macro';
> 4 |     <Trans><NumberFormat value={value} format={42} /></Trans>
    |            ^
`;

exports[`macro validation Date/Number value of date must be a variable 1`] = `
undefined: Value argument is missing.
  2 |       Trans, Plural, Select, SelectOrdinal, DateFormat, NumberFormat 
  3 |     } from '../src/macro';
> 4 |     <Trans><DateFormat /></Trans>
    |            ^
`;

exports[`macro validation Date/Number value of number must be a variable 1`] = `
undefined: Value argument is missing.
  2 |       Trans, Plural, Select, SelectOrdinal, DateFormat, NumberFormat 
  3 |     } from '../src/macro';
> 4 |     <Trans><NumberFormat /></Trans>
    |            ^
`;

exports[`macro validation Plural/Select/SelectOrdinal children are not allowed 1`] = `
undefined: Children of Plural aren't allowed.
  2 |       Trans, Plural, Select, SelectOrdinal, DateFormat, NumberFormat 
  3 |     } from '../src/macro';
> 4 |     <Plural>Not allowed</Plural>
    |     ^
`;

exports[`macro validation Plural/Select/SelectOrdinal children are not allowed 2`] = `
undefined: Children of Select aren't allowed.
  2 |       Trans, Plural, Select, SelectOrdinal, DateFormat, NumberFormat 
  3 |     } from '../src/macro';
> 4 |     <Select>Not allowed</Select>
    |     ^
`;

exports[`macro validation Plural/Select/SelectOrdinal children are not allowed 3`] = `
undefined: Children of SelectOrdinal aren't allowed.
  2 |       Trans, Plural, Select, SelectOrdinal, DateFormat, NumberFormat 
  3 |     } from '../src/macro';
> 4 |     <SelectOrdinal>Not allowed</SelectOrdinal>
    |     ^
`;

exports[`macro validation Plural/Select/SelectOrdinal offset must be number or string, not variable 1`] = `
undefined: Offset argument cannot be a variable.
  2 |       Trans, Plural, Select, SelectOrdinal, DateFormat, NumberFormat 
  3 |     } from '../src/macro';
> 4 |     <Plural value={value} offset={offset} one="Book" other="Books" />
    |     ^
`;

exports[`macro validation Plural/Select/SelectOrdinal plural forms are missing 1`] = `
undefined: Missing plural choices. At least fallback argument 'other' is required.
  2 |       Trans, Plural, Select, SelectOrdinal, DateFormat, NumberFormat 
  3 |     } from '../src/macro';
> 4 |     <Plural value={value} />
    |     ^
`;

exports[`macro validation Plural/Select/SelectOrdinal plural forms are missing 2`] = `
undefined: Missing select choices. At least fallback argument 'other' is required.
  2 |       Trans, Plural, Select, SelectOrdinal, DateFormat, NumberFormat 
  3 |     } from '../src/macro';
> 4 |     <Select value={value} />
    |     ^
`;

exports[`macro validation Plural/Select/SelectOrdinal plural forms are missing 3`] = `
undefined: Missing selectordinal choices. At least fallback argument 'other' is required.
  2 |       Trans, Plural, Select, SelectOrdinal, DateFormat, NumberFormat 
  3 |     } from '../src/macro';
> 4 |     <SelectOrdinal value={value} />
    |     ^
`;

exports[`macro validation Plural/Select/SelectOrdinal plural forms missing fallback 1`] = `
undefined: Missing fallback argument 'other'.
  2 |       Trans, Plural, Select, SelectOrdinal, DateFormat, NumberFormat 
  3 |     } from '../src/macro';
> 4 |     <Plural value={value} one="Book" />
    |     ^
`;

exports[`macro validation Plural/Select/SelectOrdinal plural forms missing fallback 2`] = `
undefined: Missing fallback argument 'other'.
  2 |       Trans, Plural, Select, SelectOrdinal, DateFormat, NumberFormat 
  3 |     } from '../src/macro';
> 4 |     <Select value={value} one="Book" />
    |     ^
`;

exports[`macro validation Plural/Select/SelectOrdinal plural forms missing fallback 3`] = `
undefined: Missing fallback argument 'other'.
  2 |       Trans, Plural, Select, SelectOrdinal, DateFormat, NumberFormat 
  3 |     } from '../src/macro';
> 4 |     <SelectOrdinal value={value} one="Book" />
    |     ^
`;

exports[`macro validation Plural/Select/SelectOrdinal plural rules must be valid 1`] = `
undefined: Invalid plural rule 'three'. Must be zero, one, two, few, many, other or exact number depending on your source language ('one' and 'other' for English).
  2 |       Trans, Plural, Select, SelectOrdinal, DateFormat, NumberFormat 
  3 |     } from '../src/macro';
> 4 |     <Plural value={value} three="Invalid" one="Book" other="Books" />
    |     ^
`;

exports[`macro validation Plural/Select/SelectOrdinal plural rules must be valid 2`] = `
undefined: Invalid plural rule 'three'. Must be zero, one, two, few, many, other or exact number depending on your source language ('one' and 'other' for English).
  2 |       Trans, Plural, Select, SelectOrdinal, DateFormat, NumberFormat 
  3 |     } from '../src/macro';
> 4 |     <SelectOrdinal value={value} three="Invalid" one="st" other="rd" />
    |     ^
`;

exports[`macro validation Plural/Select/SelectOrdinal value is missing 1`] = `
undefined: Value argument is missing.
  2 |       Trans, Plural, Select, SelectOrdinal, DateFormat, NumberFormat 
  3 |     } from '../src/macro';
> 4 |     <Plural one="Book" other="Books" />
    |     ^
`;
